<resources>
    <string name="app_name">WalkMyDog</string>

    <!-- titles of nav bottom and mobile nav -->
    <string name="title_home">Home</string>
    <string name="title_add_announcement">Add Announcement</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- pet's behavior questions  -->
    <string name="question_1">Is leash trained?</string>
    <string name="question_2">Pulls on the leash?</string>
    <string name="question_3">Doesnt like interacting with other dogs/people?</string>
    <string name="question_4">Jumps up on people and things?</string>
    <string name="question_5">Scared of traffic/loud noises?</string>
    <string name="question_6">Tries to eat things?</string>
    <string name="question_7">Digs in the dirt?</string>
    <string name="question_8">Chases smaller animals (Cats, Birds, etc)?</string>
    <string name="question_9">Tries to rush out for walk/play time?</string>
    <string name="question_10">Pees from excitement?</string>
    <string name="question_11">Shy at first, but eventually warms up</string>
    <string name="question_12">Protective of my home(may bark and snarl)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--pager fragment strings-->
    <string name="pagerFragmentTitle1">Walks for your dog</string>
    <string name="pagerDesc1">Don\'t have time for a morning walk with your dog? Add an ad in the app, and let someone else do it for you!</string>
    <string name="pagerFragmentTitle2">Ads from your neighborhood</string>
    <string name="pagerDesc2">Browse classifieds ads near you and earn quick and easy money walking your neighbours\' dogs!</string>
    <string name="pagerFragmentTitle3">Plan ahead and do not worry</string>
    <string name="pagerDesc3">You can plan a through walk for your pet a few days in advance and take care of more importan things</string>
    <string name="pagerNEXT">NEXT</string>
    <string name="pagerBACK">BACK</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="facebook">Facebook</string>
    <string name="email_and_password">Email and password</string>

    <string name="facebook_app_id">959535604670956</string>
    <string name="fb_login_protocol_scheme">fb959535604670956</string>
<!--    if default_web_client_id is unresolved reference-->
<!--  SHA-1: 35:33:1C:1B:54:6B:77:10:0B:01:0D:50:B1:2F:D7:E3:B0:70:95:D9  -->
    <string name="default_web_client_id2" translatable="false">911950557955-chi2dr2iagi0ovj936chr0hnc55gsmj0.apps.googleusercontent.com</string>
    <string name="you_don_t_have_any_messages">You don\'t have any messages</string>
    <string name="when_you_contact_another_app_user_this_is_where_you_ll_see_your_messages">When you contact another app user, this is where you\'ll see your messages</string>
    <string name="my_inbox">My inbox</string>
    <string name="inbox">You don\'t have any messages</string>
    <!---->

    
    <string-array name="edit_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>
